--- a/app.html
+++ b/app.html
@@ -8,6 +8,7 @@
     <title>elcomercio</title>
     <script src="http://cdn.sencha.com/ext/gpl/4.2.1/ext-all.js"></script>
     <link rel="stylesheet" href="http://cdn.sencha.com/ext/gpl/4.2.1/resources/ext-theme-classic/ext-theme-classic-all.css">
+    <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="app.js"></script>
 </head>
 <body></body>
